# klickbrick-cli

./: pyproject.toml
src/: __init__.py  hello.py
src/klickbrick_cli/: __init__.py
tests/: test_hello.py
