[project]
name = "klickbrick-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Hewing",email = "martinhewing777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.scripts]
klickbrick = "src:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
